[tool.poetry]
name = "mini-blog-api"
version = "0.1.0"
description = "API REST Mini-Blog (FastAPI + SQLAlchemy async + Pydantic)"
authors = ["Miguel Alarcón <anllacarpro@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version="^0.30.0"}
sqlalchemy = "^2.0.34"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.4.0"
httpx = "^0.27.2"
email-validator = "^2.3.0"
bump-pydantic = "^0.8.0"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
anyio = "^4.4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
